--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,17 @@
     ],
     "require": {
         "easycorp/easyadmin-bundle": "^4",
-        "php": ">=8.2",
-        "symfony/framework-bundle": "^7",
-        "symfony/http-kernel": "^7",
-        "symfony/config": "^7",
-        "symfony/translation": "^7.2",
-        "symfony/event-dispatcher": "^7.2",
-        "symfony/console": "7.2.*",
-        "symfony/dotenv": "7.2.*",
+        "php": "^8.2",
+        "symfony/framework-bundle": "^7.2 || ^7.3 || ^7.4",
+        "symfony/http-kernel": "^7.2 || ^7.3 || ^7.4",
+        "symfony/config": "^7.2 || ^7.3 || ^7.4",
+        "symfony/translation": "^7.2 || ^7.3 || ^7.4",
+        "symfony/event-dispatcher": "^7.2 || ^7.3 || ^7.4",
+        "symfony/console": "^7.2 || ^7.3 || ^7.4",
+        "symfony/dotenv": "^7.2 || ^7.3 || ^7.4",
         "symfony/flex": "^2",
-        "symfony/yaml": "^7.2",
-        "symfony/asset": "^7.2"
+        "symfony/yaml": "^7.2 || ^7.3 || ^7.4",
+        "symfony/asset": "^7.2 || ^7.3 || ^7.4"
     },
     "autoload": {
         "psr-4": {
